[project]
name = "sqlalchemy-libsql"
version = "0.2.0"
description = "SQLAlchemy dialect for libSQL"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Levy Albuquerque", email = "levy@turso.tech" },
]
keywords = ["sqlalchemy", "libsql", "database", "dialect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.3",
    "libsql>=0.1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
]

[project.urls]
Homepage = "https://github.com/tursodatabase/libsql-sqlalchemy"
Documentation = "https://github.com/tursodatabase/libsql-sqlalchemy#readme"
Repository = "https://github.com/tursodatabase/libsql-sqlalchemy.git"
Issues = "https://github.com/tursodatabase/libsql-sqlalchemy/issues"

[project.entry-points."sqlalchemy.dialects"]
"sqlite.libsql" = "sqlalchemy_libsql:SQLiteDialect_libsql"
"sqlite.aiolibsql" = "sqlalchemy_libsql:SQLiteDialect_aiolibsql"
